@@ -9,10 +9,13 @@ project.evaluationDependsOn(':app-fabric')
  */
 dependencies {
   // Dependencies for smartyFacts & main
-  compile elastic([group: 'com.continuuity', name: 'app-fabric', classifier: 'api', version: "${version}", changing: true],"app-fabric")
+  compile elastic([group: 'com.continuuity', name: 'app-fabric', classifier: 'api', version: "${version}", changing: true], "app-fabric")
   compile elastic([group: 'com.continuuity', name: 'app-fabric', version: "${version}", changing: true], "app-fabric")
-  compile elastic([group: 'com.continuuity', name: 'data-fabric', classifier: 'api', version: "${version}", changing: true],"data-fabric")
+  compile elastic([group: 'com.continuuity', name: 'data-fabric', classifier: 'api', version: "${version}", changing: true], "data-fabric")
   compile elastic([group: 'com.continuuity', name: 'watchdog', version: "${version}", changing: true], "watchdog")
+
+  compile elastic([group: 'com.continuuity', name: 'explore', version: "${version}", changing: true], "explore")
+  compile elastic([group: 'com.continuuity', name: 'explore-client', version: "${version}", changing: true], "explore-client")
 
   // Test framework dependencies
   compile libraries.junit
@@ -36,6 +39,7 @@ javadoc {
 
 test {
     jvmArgs '-Xmx3048m'
+    jvmArgs "-XX:MaxPermSize=2048m"
 }
 
 /**
@@ -54,8 +58,16 @@ sonar {
   }
 }
 
+/**
+ * Use io.netty instead of org.jboss.netty
+ */
 configurations {
+    all*.exclude group: 'org.jboss.netty', module: 'netty'
     all*.exclude group: 'asm', module: 'asm'
+    all {
+        // Need to enforce our version of guava, otherwise some other components with newer versions may take over
+        resolutionStrategy.force libraries.google_guava
+    }
 }
 
 uploadArchives {
@@ -72,12 +84,6 @@ uploadArchives {
                 pom.dependencies = pom.dependencies.findAll { dep ->
                     dep.artifactId != 'groovy-all' && dep.scope != 'test'
                 }
-                def dep = pom.dependencies.get(0).getClass().newInstance()
-                dep.groupId = 'com.continuuity'
-                dep.artifactId = 'app-fabric'
-                dep.version = "${version}"
-                dep.classifier = 'thrift'
-                pom.dependencies.add(dep)
             }
         }
     }
